Fixed issue in which top articles got unaligned when screen size was above 860px

--- a/style/style.css
+++ b/style/style.css
@@ -437,7 +437,6 @@ section h2 a:hover {
 .article-1 {
   width: 100%;
   height: 100%;
-  max-height: 560px;
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/09/Bitcoin.-796x417.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -445,7 +444,6 @@ section h2 a:hover {
 
 .article-2 {
   width: 100%;
-  max-height: 280px;
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/01/speeding-ticket-flash-walter-arnold-ticket-car-motoring-uk-police-bicycle-fine-796x450.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -453,7 +451,6 @@ section h2 a:hover {
 
 .article-3 {
   width: 100%;
-  max-height: 280px;
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/01/1-18-796x417.jpg");
   background-repeat: no-repeat;
   background-size: cover;
